--- a/index.html
+++ b/index.html
@@ -37,18 +37,7 @@
         <section>
             <div class="home" id="home">
                 <div class="left">
-                    <div class="snake" >
-                        <div></div>
-                        <div></div>
-                        <div></div>
-                        <div></div>
-                        <div></div>
-                        <div></div>
-                        <div></div>
-                        <div></div>
-                        <div></div>
-                        <div></div>
-                    </div>
+                    
                     <center>
                     <h2 class="label2" id="label3">FULL-STACK<br>DEVELOPER</h2>
                     <a href="#contact"class="hire">Hire Me</a>
@@ -68,7 +57,7 @@
                     <center><h3 class="inner">about me...</h3></center>
                 </div>
                 <div class="left2">
-                    <center><img src="images\software2.jpg" alt="my profile" class="profile">
+                    <center><img src="images\profile.jpg" alt="my profile" class="profile">
                         <h3 class="quote"> <i>PASSION IS ENERGY</i></h3>
                     </center>
                    
@@ -364,7 +353,7 @@
                     </div>
                 </div>
                 <div class="social">
-                    <a href="https://t.me/Ermiasgw">
+                    <a href="https://t.me/Ermiasgw" target="_blank">
                         <div class="telegram">
                     <img src="images/15.png" alt="" height="20px"><h4>https://t.me/Ermiasgw</h4>
                     </div>
